updated strings from TX, whitelisted MS for legal strings

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -66,6 +66,7 @@ ca:
   successful sign-out: "Has tancat la sessió!"
   invalid login: "Nom d'usuari/ària o contrasenya invàlids"
   invalid password: "Contrasenya incorrecta"
+  sign back in: "Per la seva seguretat, l'inici de sessió expirarà en dues setmanes. Si us plau, torna a iniciar la sessió."
   youversion: "YouVersion"
   username or email prompt: "Nom d'usuari/ària (o correu electrònic)"
   password prompt: "Contrasenya"
@@ -190,10 +191,11 @@ ca:
     thanks for registering: "Gràcies per registrar-te!"
     welcome to youversion: "Benvingut/uda a la comunitat de YouVersion!"
     confirm email: "Si us plau, revisa el teu correu electrònic i clica a l'enllaç per confirmar el teu registre."
-    sign up for an account: "Cres un compte gratuït de YouVersion"
+    sign up for an account: "Crea un compte gratuït de YouVersion"
     follow: "Segueix"
     follow user: "Segueix a %{user}"
     unfollow: "Deixa de seguir"
+    unfollow user: "Deixa de seguir %{user}"
     following title: "Gent a qui segueixo"
     user does not follow you: "%{user} no t'està seguint."
     recent activity: "Activitat recent"
@@ -386,6 +388,7 @@ ca:
     creation form errors: "Els errors següents no permeten que creïs el marcador"
     successfully created: "Marcador afegit"
     successfully deleted: "Marcador eliminat"
+    successfully updated: "Marcador actualitzat"
     labels placeholder: "Separa les diferents etiquetes amb comes."
     save: "Desar marcador"
     confirm delete: "Sí, n'estic segur"
@@ -594,7 +597,7 @@ ca:
       screencast: "Captura de pantalla de YouVersion"
     links title: "Enllaços per als mitjans de cobertura"
   mobile page:
-    h2: "La Paraluda de Déu està amb tu."
+    h2: "La Paraula de Déu està amb tu."
     h3: "YouVersion és global"
     h3 sub: "Disponible en més de 100 idiomes a tot el món."
     main: "Desenes de milions de persones estan fent servir l'aplicació de la Bíblia&trade; per fer que la Paraula de Déu una part de les seves vides diàries. Descarrega l'aplicació gratuïta i accedeix als seus marcadors, notes, i els plans de lectura des de qualsevol lloc. Gaudeix de centenars de versions, incloent àudio, tot en el seu dispositiu mòbil."
@@ -605,7 +608,7 @@ ca:
     t1: "Sempre tinc la Paraula."
     t1 copy: "Tinc passatges favorits que són importants per a mi. Fins i tot he llegit tota la Bíblia en un any gràcies als plans de lectura."
     t2: "Bon programa!"
-    t2 copy: "Aquesta aplicació ajuda a mantenir organitzat i la lectura de la Paraula de Déu cada dia. És fàcil d'usar i ofereix característiques múltiples... M'encanta!"
+    t2 copy: "Aquesta aplicació m'ajuda a organitzar-me i a llegir la Paraula de Déu cada dia. És fàcil d'utilitzar i ofereix múltiples característiques... M'encanta!"
     t3: "Molt bona aplicació!"
     t3 copy: "Gran aplicació amb una àmplia selecció de Bíblies per triar. Les Bíblies d'àudio són també meravelloses i fàcils d'entendre."
     iphone ipad: "iPhone/iPad"
@@ -641,6 +644,15 @@ ca:
   app errors:
     404 explanation: "Desafortunadament, no hem trobat la pàgina <em>%{requested_path}</em>. Si penses que la pàgina hauria d'existir, deixa que el nostre <a href='%{support_url}'>equip d'ajuda</a> ho sàpiga, o torna enrere al <a href='%{reader_path}'>lector</a>."
     404 message: "Ho sentim, la pàgina que busques no es pot trobar. "
+    408 message: "Malhauradament els nostres servidors no han respost a temps."
+    408 explanation: "Pots intentar <a href= '%{reload_path}'>a tornar a carregar</a> la pàgina. Hem rebut l'alerta i corregirem la incidència tan aviat com ens sigui possible."
   versions:
+    index title: "Versions disponibles"
     publisher widget title: "Editor"
+    visit publisher: "Visita la pàgina web de l'editorial"
+    read title: "Llegeix aquesta versió"
+    other versions: "Altres versions d'aquesta editorial"
+    number of versions field: "Versions totals:"
+    number of languages field: "Llengües totals:"
+    language and count: "%{language_name} (%{language_count})"
     public domain: "Domini públic"
