--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -140,7 +140,7 @@ de:
     save: "Speichern"
     select from list: "--Wähle--"
     edit note: "Notiz bearbeiten"
-    all notes: "Alle Notizen"
+    all notes: "Alle Notizen "
     community notes: "Gemeinschaftsnotizen"
     new note: "Neue Notiz"
     status field: "Notizen-Status:"
@@ -195,6 +195,7 @@ de:
     follow: "Folgen"
     follow user: "%{user} folgen"
     unfollow: "Nicht mehr folgen"
+    unfollow user: "Folge %{user} nicht mehr"
     following title: "Personen, denen ich folge"
     user does not follow you: "%{user} folgt dir nicht."
     recent activity: "Jüngste Aktivitäten"
@@ -643,8 +644,15 @@ de:
   app errors:
     404 explanation: "Du kannst es noch einmal von <a href='%{reader_path}'>home page</a> aus versuchen. Gibt es da immer noch Probleme? Kontaktiere unser <a href='%{support_url}'>Support-Team</a>."
     404 message: "Leider kann die Seite, die du suchst, nicht gefunden werden."
+    408 message: "Leider haben unsere Server nicht schnell genug geantwortet."
+    408 explanation: "Du kannst es erneut versuchen, indem du die Seite <a href= '%{reload_path}'>aktualisierst</a>. Wir wurden benachrichtigt und werden alle bestehenden Probleme so schnell wie möglich lösen."
   versions:
+    index title: "Zur Verfügung stehende Versionen"
     publisher widget title: "Herausgeber"
     visit publisher: "Besuche die Website des Herausgebers"
     read title: "Lese diese Version"
+    other versions: "Andere Versionen von diesem Herausgeber"
+    number of versions field: "Alle Versionen:"
+    number of languages field: "Alle Sprachen:"
+    language and count: "Alle %{language_name}en Versionen"
     public domain: "Public Domain"
