--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -22,10 +22,10 @@ hi:
   error following user: "कृपया क्षमा कीजिए, प्रस्तुत user को अनुयाय करने में त्रुटी पाया गया हैं|"
   error unfollowing user: "कृपया क्षमा कीजिए, प्रस्तुत user को अनुयाय ना करने में त्रुटी पाया गया हैं|"
   google plus: "google+"
-  connect to: "अपने %{connection}account से कनेक्ट कीजिए| "
-  connected as user: "आप %{connection} से %{username}द्वारा connected हैं| "
-  deleted connection: "आपका connection हटाने में सफलता हासिल %{connection}|"
-  deleted connection error: "कृपया क्षमा कीजिए,%{connection} आपके connection से हटाने में त्रुटी हैं| "
+  connect to: "अपने %{connection} अकाउंट से कनेक्ट कीजिए| "
+  connected as user: "आप %{connection} से %{username}द्वारा कनेक्टड हैं| "
+  deleted connection: "आपका कनेक्शन हटाने में सफलता हासिल %{connection}|"
+  deleted connection error: "कृपया क्षमा कीजिए,%{connection} आपके कनेक्शन से हटाने में त्रुटी हैं| "
   remove connection: "हटाइए "
   connection users: "कुछ और YouVersion लाभ करता से संपर्क सादे %{connection}"
   connection marketing: "YouVersion मित्रों के साथ आनंदायक हैं |अपने YouVersion कनेक्टेड अकाउंट को दूसरे सामाजिक नेटवर्क के साथ लिंक कर मित्रों को दूंदे और ग्रहित जानकारी भी शेयर कर सकते हैं| आपके अनुमती बगैर हम कुछ भी पोस्ट नहीं करेंगे|"
@@ -195,6 +195,7 @@ hi:
     follow: "अनुयाय "
     follow user: "अनुयाय%{user}"
     unfollow: "अनुयाय ना करे"
+    unfollow user: "%{user} का अनुयाय न करे "
     following title: "जिन लोगों का मैं अनुयाय कर रहा हू"
     user does not follow you: "%{user} आपके अनुयाय नहीं हैं|"
     recent activity: "ताज़ा गतिविधि"
@@ -404,7 +405,7 @@ hi:
   plans:
     title: "पाठक योजनाएँ  "
     browse by category: "श्रेणी के अनुसार ब्राउस कीजिए"
-    browse plans: "योजनाएँ ब्राउस %{category} कीजिए"
+    browse plans: "%{category}योजनाएँ ब्राउस कीजिए"
     swap list localization: "(<a href='%{swap_link}'>में देखे%{swap_locale}</a>)"
     showing language filtered: "%{lang_name}भाषा में केवल उपलब्ध पाठक योजना "
     all: "समस्त"
