--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -66,6 +66,7 @@ it:
   successful sign-out: "Uscito!"
   invalid login: "Username o Password invalido"
   invalid password: "Password Errata"
+  sign back in: "Per la tua sicurezza il log in scade dopo due settimane. per favore  accedi di nuovo."
   youversion: "YouVersion"
   username or email prompt: "Username (o E-mail)"
   password prompt: "Password"
@@ -194,6 +195,7 @@ it:
     follow: "Segui"
     follow user: "Segui a %{user}"
     unfollow: "Smetti di seguire"
+    unfollow user: "Non seguire %(utente)"
     following title: "Persone a cui sto seguendo"
     user does not follow you: "%{user} non ti sta seguendo."
     recent activity: "Attività Recenti"
@@ -386,6 +388,7 @@ it:
     creation form errors: "I(l) seguenti/e errori hanno impedito la creazione del tuo segnalibro:"
     successfully created: "Segnalibro Aggiunto"
     successfully deleted: "Segnalibro eliminato."
+    successfully updated: "I bookmark sono stati aggiornati"
     labels placeholder: "Separa le etichette con virgola."
     save: "Salva Segnalibro"
     confirm delete: "Si, sono sicuro."
@@ -641,6 +644,14 @@ it:
   app errors:
     404 explanation: "Potresti provare nuovamente partendo dal <a href='%{reader_path}'>home page</a>. Ci sono ancora problemi? Contatta il nostro <a href='%{support_url}'>servizio assistenza</a>."
     404 message: "Ci dispiace - non si trova la pagina che cerchi."
+    408 message: "Sfortunatamente i nostri servers non rispondono in modo tempestivo."
+    408 explanation: "Puoi provare ancora  nel <un href='%='% ricarica_via??????la pagina.Siamo stati avvertiti ed affronteremo i problemi persistenti il più velocemente possibile."
   versions:
+    index title: "Versioni disponibili"
     publisher widget title: "Editore"
+    visit publisher: "Visita il sito dell'Editore"
+    read title: "Leggi questa versione"
+    other versions: "Altre versioni di Questo Editore "
+    number of versions field: "Versioni complessive:"
+    number of languages field: "Lingue complessive:"
     public domain: "Dominio Pubblico"
