--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -494,6 +494,7 @@ mn:
     subscribe successful: "Гайхалтай! Та энэ уншлагын төлөвлөгөөнд нэгдлээ. "
     which day in plan: " %{total} -c %{day}  өдөр"
     must start to complete: " Дууссан уншлагаа хадгалахаар энэ тѳлѳвлѳгѳѳг эхлэх уу!"
+    invalid reference: "Уучлаарай, Энэхүү уншлагт Библийн нэг ишлэлийн дугаар нь таны сонгосон Библийн орчуулгат байхгүй байж болзошгүй. Дээрх жагсаалтаас та өөр нэг Библийн орчлуулгыг сонгож үзээрэй. Хэрэт та хэвээрээ энэхүү үгсийг хүлээн авсаар байвал, манай <a href='%{support_url}'>дэмжлэгийн багт</a>  мэдэгдэнэ үү."
   registration:
     with facebook: "Facebook ашиглан бүртгүүлэх"
     benefits title: "Бүрэн Давуу Талыг Эдлээрэй"
