--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -52,8 +52,8 @@ ro:
   badges title: "Insigne"
   currently selected: "Selectat acum:"
   read reference: "Citește %{reference}"
-  compare all versions: "Compară Toate Versiunile"
-  link will be added: "Va Fi Adăugat"
+  compare all versions: "Compară toate versiunile"
+  link will be added: "Va fi adăugat"
   my picture: "Actualizează fotografia"
   my notifications: "Gestionează notificările"
   my connections: "Conturi conectate"
@@ -68,8 +68,8 @@ ro:
   invalid password: "Parolă incorectă"
   sign back in: "Pentru siguranța ta, autentificările expiră după două săptămâni. Trebuie să te autentifici din nou."
   youversion: "YouVersion"
-  username or email prompt: "Username (sau e-mail):"
-  password prompt: "Parolă:"
+  username or email prompt: "Nume de utilizator (sau e-mail):"
+  password prompt: "Parolă"
   sign in: "Autentificare"
   sign in to youversion: "Autentifică-te la YouVersion"
   remove: "Șterge"
@@ -195,6 +195,7 @@ ro:
     follow: "Simpatizează"
     follow user: "Simpatizează pe %{user}"
     unfollow: "Nu mai simpatiza"
+    unfollow user: "Anulează simpatizarea %{user}"
     following title: "Oameni pe care-i simpatizez"
     user does not follow you: "%{user} nu te simpatizează"
     recent activity: "Activitatea recentă"
@@ -366,7 +367,7 @@ ro:
       error: "Ne pare rău, dar s-a produs o eroare la schimbarea parolei."
       old was invalid: "Ne pare rău, dar trebuie să completezi corect parola cea veche pentru a-ți schimba parola."
     notifications:
-      badges: "Înștiințează-ma despre insignele câștigate."
+      badges: "Înștiințează-mă despre insignele câștigate."
       follower: "Înștiințează-mă când cineva mă simpatizează."
       newsletter: "Ține-mă la curent cu anunțurile YouVersion."
       note_like: "Înștiințează-mă când cineva apreciază notițele mele."
@@ -644,7 +645,7 @@ ro:
     404 explanation: "Nu am găsit pagina <em>%{requested_path}</em>. Dacă crezi că această pagină ar trebui să existe, anunță <a href='%{support_url}'>support team</a> know, sau navighează înapoi la <a href='%{reader_path}'>reader</a>."
     404 message: " Ne pare rău, pagina pe care o cauți nu poate fi găsită."
     408 message: "Din păcate, serverele noastre nu au răspuns în timp util."
-    408 explanation: "Popți încerca din nou <a href= %{reload_path}>reîncarcând</a> pagina. Am fost notificați și ne vom ocupa de problemă în cel mai scurt timp."
+    408 explanation: "Poți încerca din nou <a href= %{reload_path}>reîncarcând</a> pagina. Am fost notificați și ne vom ocupa de problemă în cel mai scurt timp."
   versions:
     index title: "Versiuni disponibile"
     publisher widget title: "Editor"
