--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -59,8 +59,8 @@ tl:
   my connections: "Mga Accounts na Konektado"
   my devices: "Mga Devices Na Nakakonek"
   language name: "Filipino"
-  sign up: "Magsign-up"
-  have an account: "May Account Ka na ba?"
+  sign up: "Mag-sign Up"
+  have an account: "May Account Ka na Ba?"
   no account: "Wala Pang Account?"
   successful sign-in: "Nakasign-in bilang si %{user}!"
   successful sign-out: "Nakasign-out!"
@@ -184,17 +184,18 @@ tl:
     profile form errors: "Ang mga sumusunod na (mga) pagkakamali ay kailangang ayusin bago ma-update ang iyong profile:"
     email address: "Email Address"
     user name: "Username"
-    agreement: "Sang-ayon ako sa Youversion %{terms_link}."
+    agreement: "Sang-ayon ako sa %{terms_link} ng Youversion."
     terms and conditions: "Mga Termino at Mga Kondisyon"
     facebook sign up success: "Magaling! Na-authorize mo na ang Facebook. Pumili ng Youversion ng username at password upang magpatuloy."
-    register: "Magrehistro"
+    register: "Mag-sign Up"
     thanks for registering: "Salamat sa pagrehistro!"
     welcome to youversion: "Welcome sa Youversion community!"
     confirm email: "Pakitingnan ang iyong email at puntahan ang link para makumpirma ang iyong pagrehistro."
-    sign up for an account: "Gumawa ng Libreng Youversion Account"
+    sign up for an account: "Gumawa ng Libreng YouVersion Account"
     follow: "Sundan"
     follow user: "Sundan si %{user}"
     unfollow: "I-unfollow"
+    unfollow user: "I-unfollow si %{user}"
     following title: "Mga Taong Aking Sinusundan"
     user does not follow you: "Hindi ka sinusundan ni %{user}."
     recent activity: "Mag-sign in sa Youversion"
@@ -203,7 +204,7 @@ tl:
     subscribed to plan: "Mga Users na Naka-subscribe sa %{plan}"
     reading: "Mga Users na Nagbabasa ng Planong Ito"
     subscribed previously: "Nagsimula %{time_ago}"
-    sign in for settings: "Magsign-in para ma-access ang iyong profile."
+    sign in for settings: "Mag-sign in para mapuntahan ang iyong profile."
     my profile: "Ang Aking Profile"
     edit profile: "I-edit ang Profile"
     update profile: "I-update ang Profile"
@@ -261,7 +262,7 @@ tl:
       translation disclaimer: "Ang patakaran ng pagsasarilinan ay sinalin upang madali sa iyo; subalit, ang LifeChurch.tv ay walang panangutan o pagkakatawan pagdating sa kawastuhan ng pagsalin.  Kung may pagkakaiba sa Ingles at sinaling wika, ang Ingles na bersyon ang mananaig.  "
       what we collect: "Ano ang aming kinokolekta at paano namin ito gagamitin"
       your information title: "Impormasyong iyong ibinigay"
-      your information text: "Pag nagsign-up ka para sa YouVersion account, o ibang serbisyo o promosyon ng LifeChurch.tv at kailangang magrehistro,  kailangan namin ang iyong impormasyong pangpersonal (tulad ng pangalan, email address at account password). Maaari naming pagsamahin ang lahat ng mga impormasyong iyong naibigay sa iyong account at impormasyong iyong naibigay din sa ibang mga serbisyo ng LifeChurch.tv o pangatlong partido para mabigyan ka ng mas magandang karanasan at mapabuti ang kalidad ng aming mga serbisyo. Para sa mga ibang serbisyo, maaari kang pumili kung gusto mong  pagsamahin ang mga impormasyong iyong ibinigay."
+      your information text: "Kapag nagsign-up ka para sa iyong YouVersion account, o sa iba pang serbisyo o promosyon ng LifeChurch.tv, kinakailangan namin ang ilang impormasyon tungkol sa iyo (tulad ng pangalan, email address at account password). Maaari naming pagsamahin ang mga impormasyong iyong naibigay sa iyong account sa impormasyong iyong naibigay din sa ibang mga serbisyo ng LifeChurch.tv o iba pang partido para mabigyan ka nang mas magandang karanasan at mapabuti ang kalidad ng aming mga serbisyo. May ibang mga serbisyo na maaari kang pumili kung gusto mong  pagsamahin ang mga impormasyong iyong ibinigay."
       device id title: "Unique na Device ID"
       device id text: "Pag na-access mo ang YouVersion Application, maaari naming gamitin ang iyong Unique na Device ID ('UDID') at/ o kaya ay IP address. Gagamitin naming ang iyong UDID para mabigyan ka ng mas "
       cookies title: "Mga LifeChurch.tv cookies"
@@ -397,7 +398,7 @@ tl:
     labels comma separated: "Tanda (hiniwalay ng comma):"
     update: "Pagbabago"
     color: "Kulay:"
-    version field: "Bersiyon:"
+    version field: "Salin:"
   badges:
     earned a badge: "Nakapagkamit ka ng Badge"
     user badges: "Mga Badges ni %{user}"
@@ -497,8 +498,8 @@ tl:
     invalid reference: "Paumanhin, isa sa mga sangguniang talata ng Bibliya para sa babasahing ito ay maaaring hindi kasama sa napiling salin. Maaaring pumili ng ibang salin ng Bibliya sa itaas. Kung patuloy na nakikita ang mensahe tungkol sa pagkakamaling ito, paki bigay alam sa aming <a href='%{support_url}'>support team</a>. Salamat po."
   registration:
     with facebook: "Mag-sign up gamit ang Facebook"
-    benefits title: "Maranasan ang Kabuuan"
-    benefits blurb: "Ang paggawa ng YouVersion account ay magbibigay sa iyo ng access sa  ibang features tulad ng bookmarks at mga tala. Sila'y makikita sa anumang device kung saan ka man nagsign-in. Sa iyong account, mapadadali ang pagshare ng Bibliya sa iyong mga kaibigan, kaya sign up na!"
+    benefits title: "Tuklasin ang Kakaibang Karanasan"
+    benefits blurb: "Sa paggawa ng YouVersion account, magkakaroon ka ng access sa  ibang tampok tulad ng mga bookmark at mga tala. Makikita mo ang mga ito sa anumang device kung kapag naka-sign in. Madali ding magbahagi ng Bibliya sa iyong mga kaibigan, kaya sign up na!"
     plan blurb: "Mukhang gusto mong mag-umpisa ng Reading Plan. Matutulungan ka nitong gawin ang Bibliya bilang bahagi ng iyong pang araw-araw na buhay. Magsign-in na o gumawa ng account sa ibaba at mag-umpisa na!"
     bookmark blurb: "Mukhang gusto mong gumamit ng bookmark. Magaling! Matutulungan ka nitong makita ang mga verses na nais mong i-memorize, i-share o kaya ay markahan bilang paborito. Magsign-in na o gumawa ng account sa ibaba at mag-umpisa na!"
     friends blurb: "Mukhang gusto mong makipag-interact sa mga Kaibigan. Magandang ideya! Magagawa mong mai-share ang iyong napag-aaralan at magtulungan ang bawat isa sa hangaring magbasa. Magsign-in na o gumawa ng account sa ibaba at mag-umpisa na!"
@@ -546,7 +547,7 @@ tl:
     creation form errors: "Ang sumusunod na (mga) pagkakamali ay balakid sa pagbigay ng donasyon:"
   download ad:
     title: "I-download ang Libreng Bible App"
-    line 1: "Daan-daang bersiyon sa100+"
+    line 1: "Daan-daang salin sa 100+"
     line 2: "iba't ibang wika - ang Bibliya"
     line 3: "na kasama mo kahit saan."
     download: "I-download na."
@@ -603,13 +604,13 @@ tl:
     button h4: "Pumunta sa youversion.com/download"
     button h4 sub: "Sa Iyong Mobile na Kagamitan"
     download now: "I-download ang The Bible App Ngayon"
-    what people: "Ang mga sinasabi ng mga tao tungkol sa libreng Bible app..."
-    t1: "Lagi akong may Salita."
+    what people: "Mula sa mga taong gumagamit na ng libreng Bible app..."
+    t1: "Lagi akong may Bibliya."
     t1 copy: "Binookmark ko na ang mga talatang mahalaga sa akin. Nabasa ko na ang lahat sa isang taon salamat sa mga plano ng pagbasa.  "
     t2: "Magaling na programa!"
-    t2 copy: "Itong app ay nakakatulong sa aking mag-organisa at magbasa ng Salita ng Diyos bawat araw. Madali itong gamitin at marami itong katangian...Mahal ko ito!"
+    t2 copy: "Itong app ay nakatutulong sa aking mag-organisa at mabasa ang Salita ng Diyos araw araw. Madali itong gamitin at marami itong katangian...Mahal ko ito!"
     t3: "Magaling na app. "
-    t3 copy: "Magaling na app na mas maraming seleksyon ng Bibliyang mapagpipilian. ...Ang mga audio na Bibliya ay magaling din at madaling maintindihan. "
+    t3 copy: "Magaling na app na may maraming seleksyon ng Bibliya. ...Ang mga audio na Bibliya ay kahanga-hanga din at madaling maintindihan. "
     iphone ipad: "iPhone/iPad"
     android: "Android"
     blackberry: "BlackBerry"
@@ -646,12 +647,12 @@ tl:
     408 message: "Sa kasamaang palad ang server namin ay di sumagot sa tamang oras. "
     408 explanation: "Subukan mo ulit sa pamamagitan ng <a href= %{reload_path}>pag-reload</a> ng pahina. Kami ay naalerto na at tutugunan ang paulit-ulit na mga problema sa lalong madaling panahon.  "
   versions:
-    index title: "Mga Maaaring Gamiting Bersiyon"
+    index title: "Mga Maaaring Gamiting Salin"
     publisher widget title: "Naglathala"
     visit publisher: "Bisitahin ang Website ng Tagalathala"
     read title: "Basahin Itong Bersyon"
-    other versions: "Mga Ibang Bersiyon Mula sa Tagalathala"
-    number of versions field: "Kabuuang Mga Bersiyon:"
+    other versions: "Mga Ibang Salin Mula sa Tagapaglathala"
+    number of versions field: "Kabuuang Mga Salin:"
     number of languages field: "Kabuuang Mga Wika:"
     language and count: "%{language_name} (%{language_count})"
     public domain: "Pampublikong Domain"
