--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -66,6 +66,7 @@ vi:
   successful sign-out: "Đã đăng xuất!"
   invalid login: "Tên và mật khẩu không hợp lệ!"
   invalid password: "Mật khẩu không chính xác"
+  sign back in: "Vì lý do an ninh, đăng nhập của bạn đã hết hạn sau hai tuần. Xin hãy đăng nhập  lại!"
   youversion: "YouVersion"
   username or email prompt: "Tên sử dụng (hoặc email)"
   password prompt: "Mật khẩu"
@@ -194,6 +195,7 @@ vi:
     follow: "Theo dõi"
     follow user: "Theo %{user}"
     unfollow: "Ngừng theo"
+    unfollow user: "Ngừng theo %{user}"
     following title: "Những người tôi theo"
     user does not follow you: "%{user} không theo bạn"
     recent activity: "Hoạt động gần đây"
@@ -386,6 +388,7 @@ vi:
     creation form errors: "Các lỗi sau khiến bạn không tạo đánh dấu được:"
     successfully created: "Đã thêm đánh dấu"
     successfully deleted: "Đánh dấu đã gỡ bỏ"
+    successfully updated: "Đánh dấu đã cập nhật"
     labels placeholder: "Tách các nhãn tên bằng dấu phẩy"
     save: "Lưu đánh dấu"
     confirm delete: "Vâng, tôi chắc!"
@@ -531,7 +534,7 @@ vi:
     card number: "Số thẻ tín dụng"
     card exp date: "Ngày hết hạn (TTNN)"
     receipt: "Email bản sao hóa đơn cho tôi."
-    preview: "Sơ lược quyên góp"
+    preview: "Tóm lược dâng hiến"
     header copy: "Chúng ta có thể cùng nhau trở thành thế hệ quan tâm đến Kinh Thánh nhiều nhất trong lịch sử. Ủng hộ của bạn sẽ giúp mọi người tiếp cận Lời Chúa trong nhiều hoàn cảnh, ngôn ngữ, bản dịch, và trong nhiều quốc gia hơn từ trước đến nay. Hãy điền vào mẫu dưới đây để dâng hiến. Chúng tôi sẽ thu nhận thông tin về hiện kim ở trang kế tiếp."
     header confirm copy: "Chúng ta có thể cùng nhau trở thành thế hệ quan tâm đến Kinh Thánh nhiều nhất trong lịch sử. Ủng hộ của bạn sẽ giúp mọi người tiếp cận Lời Chúa trong nhiều hoàn cảnh, ngôn ngữ, bản dịch, và trong nhiều quốc gia hơn từ trước đến nay. Hãy nhấp vào \"Dâng hiến bây giờ\" để thực hiện điều đó."
     donate now button: "Dâng hiến bây giờ"
@@ -563,7 +566,7 @@ vi:
     bible dot com copy: "Nếu bạn đang tìm thông tin về Bible.com hoặc Mục Vụ Đấng Christ Không Biên Giới (Christ Unlimited Ministries) của Bud và Betty Miller, hãy vào trang mạng mới của họ tại <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title: "Khu vực thông tấn"
-    contact header: "Thông tin liên lạc thông tấn"
+    contact header: "Thông tin liên lạc"
     contact header 2: "Vòng quanh trang mạng"
     phone: "Điện thoại"
     email: "Email"
@@ -641,6 +644,15 @@ vi:
   app errors:
     404 explanation: "Bạn có thể thử lại từ đầu ở <a href='%{reader_path}'>trang nhà</a>. Nếu vẫn có trục trặc, hãy liên hệ <a href='%{support_url}'>nhóm hỗ trợ</a> của chúng tôi."
     404 message: "Xin lỗi bạn, chúng tôi không tìm được trang mà bạn yêu cầu."
+    408 message: "Phản hồi chậm từ các máy chủ."
+    408 explanation: "Bạn có thể thử <a href= '%{reload_path}'>tải lại</a> trang này. Chúng tôi sẽ cố gắng giải quyết cách nhanh chóng cho bất cứ vấn đề nào bị kéo dài."
   versions:
+    index title: "Các bản dịch có sẵn"
     publisher widget title: "Phát hành"
+    visit publisher: "Xem trang phát hành"
+    read title: "Đọc bản này"
+    other versions: "Các bản dịch khác từ nhà phát hành này"
+    number of versions field: "Tổng số bản dịch:"
+    number of languages field: "Tổng số ngôn ngữ:"
+    language and count: "%{language_name} (%{language_count})"
     public domain: "Miền công cộng"
